# rust-git

./: Cargo.toml  README.md
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/1-cli/: cli.md  learnings.md
docs/src/2-init/: init.md  learnings.md
docs/src/3-staging/: add.md  learnings.md  staging.md
docs/src/4-saving/: saving.md
src/: command.rs  config.rs  error.rs  hash.rs  index.rs  main.rs  object.rs  object_store.rs  options.rs  refs.rs  repo.rs
src/add/: add.rs  cli.rs  command.rs  mod.rs
src/branch/: cli.rs  command.rs
src/cat_file/: cli.rs  command.rs
src/commands/: mod.rs
src/commands/plumbing/: mod.rs
src/commands/plumbing/cat_file/: cli.rs  command.rs
src/commands/porcelain/: mod.rs
src/commit/: cli.rs
src/commit_tree/: cli.rs  command.rs
src/hash_object/: cli.rs  command.rs  hash_object.rs  mod.rs
src/init/: cli.rs  command.rs  init.rs  mod.rs
src/ls_files/: cli.rs  command.rs
src/mv/: cli.rs  command.rs
src/object/: blob.rs  commit.rs  id.rs  identity.rs  mod.rs  raw.rs  tag.rs  tree.rs
src/restore/: cli.rs  command.rs
src/rm/: cli.rs  command.rs
src/switch/: command.rs
src/symbolic_ref/: cli.rs  command.rs
src/tag/: cli.rs  command.rs
src/update_index/: cli.rs  command.rs
src/update_ref/: cli.rs
src/write_tree/: command.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
tests/: add.rs  branch.rs  cat-file.rs  commit-tree.rs  commit.rs  hash-object.rs  init.rs  ls-files.rs  mv.rs  restore.rs  rm.rs  switch.rs  symbolic-ref.rs  tag.rs  update-ref.rs  write-tree.rs
(+19 files in other folders)
