[package]
name = "rust-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "env"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
mdbook = "0.4.37"
predicates = "3.1.0"
